[package]
name = "abxml"
version = "0.5.2"
license = "MIT/Apache-2.0"
authors = [
    "Guillem Nieto <gnieto.talo@gmail.com>",
    "Iban Eguia <razican@protonmail.ch>"
]
repository = "https://github.com/SUPERAndroidAnalyzer/abxml-rs"
description = """
Parser for resources.arsc contained on APKs and binary XML decompresser
"""
keywords = ["android", "arsc", "apk", "parser"]
categories = ["parser-implementations", "parsing"]

[badges]
travis-ci = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master" }
#appveyor = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master", service = "github" }
codecov = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "SUPERAndroidAnalyzer/abxml-rs" }
is-it-maintained-open-issues = { repository = "SUPERAndroidAnalyzer/abxml-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
failure = "0.1.2"
byteorder = "1.2.4"
ansi_term = "0.11.0"
log = "0.4.3"
env_logger = "0.5.11"
zip = { version = "0.4.2", optional = true}
encoding = "0.2.33"
xml-rs = "0.8.0"

[features]
default = ["zip_decode"]
zip_decode = ["zip"]

[[example]]
name = "exporter"
required-features = ["zip_decode"]

[[example]]
name = "converter"
required-features = ["zip_decode"]
