[package]
name = "abxml"
version = "0.7.1"
license = "MIT/Apache-2.0"
authors = [
    "Guillem Nieto <gnieto.talo@gmail.com>",
    "Iban Eguia <razican@protonmail.ch>"
]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/abxml/"
repository = "https://github.com/SUPERAndroidAnalyzer/abxml-rs/"
homepage = "https://superanalyzer.rocks/"
description = """
Parser for resources.arsc contained on APKs and binary XML decompresser.
"""
keywords = ["android", "arsc", "apk", "parser"]
categories = ["parser-implementations", "parsing"]

[badges]
travis-ci = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master" }
codecov = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "SUPERAndroidAnalyzer/abxml-rs" }
is-it-maintained-open-issues = { repository = "SUPERAndroidAnalyzer/abxml-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
failure = "0.1.5"
byteorder = "1.2.7"
ansi_term = "0.11.0"
log = "0.4.6"
env_logger = "0.6.0"
zip = { version = "0.5.0", optional = true }
encoding = "0.2.33"
xml-rs = "0.8.0"

[features]
default = ["zip_decode"]
zip_decode = ["zip"]

[[example]]
name = "exporter"
required-features = ["zip_decode"]

[[example]]
name = "converter"
required-features = ["zip_decode"]
