[package]
name = "abxml"
version = "0.8.2"
license = "MIT/Apache-2.0"
authors = [
    "Guillem Nieto <gnieto.talo@gmail.com>",
    "Iban Eguia <razican@protonmail.ch>"
]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/abxml/"
repository = "https://github.com/SUPERAndroidAnalyzer/abxml-rs/"
homepage = "https://superanalyzer.rocks/"
description = """
Parser for resources.arsc contained on APKs and binary XML decompresser.
"""
keywords = ["android", "arsc", "apk", "parser"]
categories = ["parser-implementations", "parsing"]

[badges]
travis-ci = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master" }
codecov = { repository = "SUPERAndroidAnalyzer/abxml-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "SUPERAndroidAnalyzer/abxml-rs" }
is-it-maintained-open-issues = { repository = "SUPERAndroidAnalyzer/abxml-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
byteorder = "1.3.2"
ansi_term = "0.12.1"
log = "0.4.8"
env_logger = "0.7.1"
zip = { version = "0.5.4", optional = true }
encoding = "0.2.33"
quick-xml = "0.17.2"
anyhow = "1.0.26"

[features]
default = ["zip_decode"]
zip_decode = ["zip"]

[[example]]
name = "exporter"
required-features = ["zip_decode"]

[[example]]
name = "converter"
required-features = ["zip_decode"]
